# slides

./: .gitignore  dune-project  flake.nix  slides.opam
2023-05-25_formal-power-series/: fps.saty  fps.satysfi-aux
2024-10-19_ocaml-printf/: package-lock.json  package.json  slides.md
2024-10-19_ocaml-printf/.slidev/snapshots/: snapshots.json
2024-10-19_ocaml-printf/pages/: imported-slides.md
2025-01-18_about-recently-ocaml/: about-recently-ocaml.md
2025-03-14_nix-intro/: slide.html  slide.md
2025-05-30_love-ocaml/: slide.html  slide.md
2025-08-09_ocamljp/: slide.html  slide.md
2025-09-05_continuation-is-power/: slide.html  slide.md
2025-10-17_continuation-effect/: slide.html  slide.md
2026-06-13_sigv4-ml/: slide.html  slide.md
